# Tinker_Sber

./: .gitignore  Dockerfile  README.md  docker-compose.yml  frames_2025-08-12_22.31.21.gv  get_it_done.md
3d_models/: .gitignore  DM-J6006.m3d  DM_8006.m3d  DM_8006.m3d.bak  Feetech_SERVO_SCS40.m3d.bak  Jetson nano_fixed_9.m3d  Power_board.m3d  README.md  README.txt  ethernet2can.m3d  ~$-J6006.m3~  ~$Булка.m3~  ~$Голень.m3~  ~$Стул.m3~  ~$Тинкер.a3~  ~$астина.m3~  ~$грудникV2.m3~  ~$грудник_Держатель.m3~  ~$зовая_Прокладка.m3~  ~$ище_Корпуса.m3~  ~$окладка_Стопы.m3~  ~$реднее_Ребро.m3~  ~$ржатель_ТазаV2.m3~  ~$сширитель_РюкзакаV2.m3~  ~$умблер.m3~  ~$чалка_SCS125.m3~  ~$ышка_Тумблера.m3~  Акум.m3d  Башмак.m3d  Бедро.m3d  Бедро.m3d.bak  БедроV2.m3d  БедроV2.m3d.bak  Бедро_Другое.m3d  Булка.m3d  Булка.m3d.bak  Голень.m3d  Голова.m3d  Датчик.m3d  Держатель_Таза.m3d  (+48 more)
3d_models/Новое/: Boot.m3d  Boot.m3d.bak  DM-J6006.m3d  DM-J6006.m3d.bak  DM_8006.m3d  DM_8006.m3d.bak  Feetech_SERVO_SCS125.m3d  Feetech_SERVO_SCS125.m3d.bak  Holder.m3d  Holder.m3d.bak  Lower_Panel.m3d  Lower_Panel.m3d.bak  Odroid-C4 v29_5.m3d  Power_Plate_Holder.m3d  Power_Plate_Holder.m3d.bak  Power_board.m3d  Power_board.m3d.bak  Stand.a3d  Stand.a3d.apmf  Stand.a3d.bak  Upper_Panel.m3d  Upper_Panel.m3d.apmf  Upper_Panel.m3d.bak  ~$-J6006.m3~  ~$Holder.m3~  ~$M_8006.m3~  ~$etech_SERVO_SCS125.m3~  ~$roid-C4 v29_5.m3~  ~$wer_Panel.m3~  ~$wer_Plate_Holder.m3~  ~$wer_board.m3~  ~$Башмак.m3~  ~$Булка.m3~  ~$Голень.m3~  ~$Голова.m3~  ~$Сборка.sp~  ~$Тинкер.a3~  ~$амейка.m3~  ~$ата_STM.m3~  ~$грудникV2.m3~  (+96 more)
Chellenge-Tinker/: .gitignore
Chellenge-Tinker/install/: local_setup.sh  setup.sh
Chellenge-Tinker/log/: latest_build
Docker_notebook/: Dockerfile  README.md  docker-compose.yml
Docker_notebook/Tinker_sber_RL/: modelt.pt  simple_play.py
Gleb_3d_models/: README.txt
RL/: Readme.md
Tinker_sber_RL/: model_jitt.pt  sim2sim_tinker.py
Tinker_sber_RL/configs/: tinker_constraint_him.py
Tinker_sber_RL/runner/: on_constraint_policy_runner.py
assemble/: README.md
assemble/3d_models/: FeeTech_SCS40.m3d  README.md  Кость_Таза.m3d  Крышка_Корпуса.m3d  Крышка_Платы_Питания.m3d  Нагрудник_Середина.m3d  Нагрудник_Сторона.m3d  Наполнитель_Бедра2.stl  Операция без истории1.m3d  Прокладка_Стопы.m3d  Рамка_Рюкзака.m3d  Расширитель_РюкзакаV1.m3d  Рюкзак.m3d  РюкзакV2.m3d  Стопа_с_Протектором.m3d
assemble/electronics/: README.md
docker_GUI/: Dockerfile  build_cont.sh  build_img.sh  docker-entrypoint.sh  docker_ethernet2can_pc.md  new_window_cont.sh
electronics/: README.md
firmware/: .gitignore  .mxproject  CMakeLists.txt  Debug_Record  F407_FC.uvguix.51218  F407_FC.uvguix.Administrator  F407_FC.uvguix.bager  F407_FC.uvguix.golac  F407_FC.uvguix.golaced  F407_FC.uvguix.hp  F407_FC.uvguix.xingboyang  F407_FC.uvopt  F407_FC.uvoptx  F407_FC.uvproj.saved_uv4  F407_FC.uvprojx  JLinkLog.txt  TEST.ANO  firmware.ioc
firmware/MAVLINK/: checksum.c  checksum.h  define.h  fifo.c  fifo.h  mavl.c  mavl.h  mavlink_helpers.c  mavlink_helpers.h  mavlink_types.h  protocol.c  protocol.h
firmware/SCSs/: SCSCL.c  SCSerail.c
firmware/applications/: Matrix.c  Matrix.h  init.c  init.h  main.c  miniMatrix.c  miniMatrix.h  quar.c  quar.h  scheduler.c  scheduler.h  stm32f4xx_conf.h  stm32f4xx_it.c  wsled.h
firmware/balance_controller/: RT_math.c  base_struct.h  common_math.c  fliter_math.c  gait_math.h  hardware_interface.c  kin_math.c  locomotion_header.h  traj_math.c
firmware/drivers/: Custom_SPI_Device.c  Custom_SPI_Device.h  LobotSerialServo.c  LobotSerialServo.h  SPL06.c  SPL06.h  aoa_uwb.c  bat.c  bat.h  beep.c  beep.h  can.c  can.h  dma.c  dma.h  ecos_link.c  ecos_link.h  ecos_link1.c  flash.c  flash.h  flash_w25.c  flash_w25.h  gps.c  gps.h  i2c_soft.c  i2c_soft.h  icm20602.c  icm20602.h  iic_vl53.c  iic_vl53.h  led_fc.c  led_fc.h  mit_link.c  mpuiic.c  mpuiic.h  ms5611.c  ms5611.h  nlink_linktrack_aoa_nodeframe0.h  nlink_utils.c  nlink_utils.h  (+19 more)
firmware/estimator_sr/: EKF_AHRS.c  EKF_AHRS.h  EKF_UPDATE.c  EKF_UPDATE.h  EKF_UPDATE_types.h  baro_ekf_oldx.h  baro_fushion.c  baro_kf.c  baro_kf.h  ekf_pos.c  ekf_pos.h  inv.c  inv.h  mpower.c  mpower.h  nav.h  nav2.c  pose_fushion.c  pose_kf.c  pose_kf.h  pose_kf_types.h  rtGetInf.h  rt_nonfinite.h
firmware/quadruped_src/: 2dof_lib.c  2dof_lib.h  cycle_cal_oldx.h  dog.h  eso.c  eso.h  (+21 more)
hardware_task/: .gitignore  CMakeLists.txt  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/tinker_motor_gui/share/tinker_motor_gui/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/tinker_motor_gui/share/tinker_motor_gui/msg/: MotorParams.msg
log/: latest_build
software/ros2/odroid/hardware_msg/: CMakeLists.txt
software/ros2/odroid/motor_control/: CMakeLists.txt  package.xml
software/ros2/odroid/motor_control/include/: spi_node.h
software/ros2/odroid/motor_control/launch/: display.launch.py
software/ros2/odroid/motor_control/src/: main.cpp  sys_timer.cpp
software/ros2/odroid/motor_control/urdf/: robot.urdf
software/ros2/src/tinker_msgs/: CMakeLists.txt  README.md  package.xml
software/ros2/src/tinker_msgs/msg/: ControlCmd.msg  MotorState.msg  OneMotorCmd.msg
spi_can_bridge/: CMakeLists.txt  package.xml
spi_can_bridge/launch/: bridge.launch.py
spi_can_bridge/src/: spi_can_bridge.cpp
src/spi_demon/: CMakeLists.txt  package.xml
src/spi_demon/include/spi_demon/: circular_buffer_spi.hpp  producer_consumer.hpp  spi_reader.hpp
src/spi_demon/src/: main_launcher.cpp  producer_consumer.cpp  spi_reader.cpp
src/spi_demon/test/: spi_communication_test.cpp
src/tinker_bringup/: CMakeLists.txt  package.xml
src/tinker_bringup/launch/: tinker_description.launch.py
src/tinker_bringup/src/: tinker_bringup.cpp
src/tinker_gui/: CMakeLists.txt  package.xml  setup.py
src/tinker_gui/config/: gui_node.yaml
src/tinker_gui/launch/: gui_and_rviz.launch.py  gui_system.launch.py
src/tinker_gui/src/: commands_to_states_bridge.py  gui_slider_node.py  states_to_joint_states.py  test_data_publisher.py
(+614 files in other folders)
